--- a/frontend/src/app/components/project/project.component.html
+++ b/frontend/src/app/components/project/project.component.html
@@ -1,1 +1,5 @@
-<p>project works!</p>
+<mat-card class="card">
+  <mat-card-title>{{project.name}}</mat-card-title>
+  <mat-card-subtitle>{{project.description}}</mat-card-subtitle>
+  <mat-card-content>{{project.comment}}</mat-card-content>
+</mat-card>
